# CupruxOS

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
iso_root/boot/: cupruxos-kernel
iso_root/boot/limine/: limine.cfg  limine.conf
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/riscv64/: mod.rs
kernel/src/arch/x86_64/: boot.rs  entry.asm  linker.ld  mod.rs
kernel/src/arch/x86_64/gdt/: mod.rs
kernel/src/arch/x86_64/idt/: mod.rs
kernel/src/arch/x86_64/mm/: mod.rs
kernel/src/drivers/: mod.rs  uart.rs
kernel/src/ipc/: mod.rs
kernel/src/mm/: heap.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/sched/: mod.rs
kernel/src/syscall/: mod.rs
kernel/src/vfs/: mod.rs
libcuprum/: Cargo.toml
libcuprum/src/: cap.rs  ipc.rs  lib.rs  mem.rs  task.rs  time.rs
tools/cuprumfs/: Cargo.toml
tools/cuprumfs/src/: main.rs
userland/driver_manager/: Cargo.toml
userland/driver_manager/src/: main.rs
userland/init/: Cargo.toml
userland/init/src/: main.rs
userland/vfs_server/: Cargo.toml
userland/vfs_server/src/: main.rs
